--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#h2 console ??? ? ?? ??
+#h2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-#h2 db ??
+#h2 db
 spring.datasource.url=jdbc:h2:~/carrot
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -12,7 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jpa.open-in-view=false
 
-#show sql ??? ???.
+#show sql
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl auto
