--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
 spring.jpa.open-in-view=false
 
 #show sql
@@ -17,3 +16,17 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl auto
 spring.jpa.hibernate.ddl-auto=create
+
+#Live Reload
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
+
+#img
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.file-size-threshold=100MB
+spring.servlet.multipart.location=c:\\upload
+
+#profile_img storage
+profile.img.dir = D:/pf/
