--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8888
+
 #h2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -15,7 +17,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 #Live Reload
 spring.devtools.livereload.enabled=true
