--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #h2 db
-spring.datasource.url=jdbc:h2:~/carrot
+spring.datasource.url=jdbc:h2:~/carrot;AUTO_SERVER=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
