--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-server.port=8888
-
 #h2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -31,3 +29,5 @@ spring.servlet.multipart.location=c:\\upload
 
 #profile_img storage
 profile.img.dir = D:/pf/
+
+spring.messages.basename=errors
