회원정보수정 기능
회원정보수정기능

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,12 @@ spring.servlet.multipart.file-size-threshold=100MB
 spring.servlet.multipart.location=c:\\upload
 
 #profile_img storage
-profile.img.dir = D:/pf/
+#dir.img-profile = D:/pf/
+dir.img-profile = /Users/img/pf/
 
+#errors
+server.error.include-exception=true
+server.error.include-message=always
+server.error.include-stacktrace=always
+server.error.include-binding-errors=always
 spring.messages.basename=errors
