--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //query parameter log
     //implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+    //annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
 
 tasks.named('test') {
