--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -3,5 +3,5 @@
 #Range={0}, {2} ~ {1} 허용
 #Max={0}, 최대 {1}
 
-pwdConfirmInCorrect= 암호가 일치하지 않습니다.
+pwdConfirmIncorrect= 암호가 일치하지 않습니다.
 duplicatedMemId = 이미 존재하는 아이디입니다.
