block 차단 기능 추가
block 차단 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8888
+
 #h2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -25,7 +27,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
-spring.servlet.multipart.location=c:\\upload
+#spring.servlet.multipart.location=c:\\upload
+spring.servlet.multipart.location=/Users/img/post
+#file.postImg = c:\\upload
+file.postImg = /Users/img/post
 
 #profile_img storage
 #dir.img-profile = D:/pf/
@@ -38,4 +43,3 @@ server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 spring.messages.basename=errors
 
-file.postImg = c:\\upload
