--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //query parameter log
     //implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
-    //annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    //암호화 알고리즘 Bcrypt 라이브러리
+    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+
 }
 
 tasks.named('test') {
