--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
-#spring.servlet.multipart.location=c:\\upload
-spring.servlet.multipart.location=/Users/img/post
+spring.servlet.multipart.location=c:\\upload
+#spring.servlet.multipart.location=/Users/img/post
 file.postImg = c:\\upload
 #file.postImg = /Users/img/post
 
