querydsl을 위한 dto추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:h2:~/carrot;AUTO_SERVER=true
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect4
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 
@@ -17,7 +17,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #ddl auto
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
