--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     //validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     //query parameter log
-    //implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
     //암호화 알고리즘 Bcrypt 라이브러리
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     // querydsl 디펜던시 추가
