--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,21 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
 
 #show sql
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#system.print.out으로 출력
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#logger로 출력
+#logging.level.org.hibernate.SQL=debug: debug
+#sql 문에서 (?)들이 bindingparameter = "실제값"으로 나옴.
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#JPQL 보기
+#spring.jpa.properties.hibernate.use_sql_comments = true
+#P6spy
+decorator.datasource.p6spy.enable-logging = true
+
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
@@ -29,12 +40,12 @@ spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
 #spring.servlet.multipart.location=c:\\upload
 #spring.servlet.multipart.location=/Users/img/post
-#file.postImg = c:\\upload
-file.postImg = /Users/img/post
+file.postImg = c:\\upload
+#file.postImg = /Users/img/post
 
 #profile_img storage
-#dir.img-profile = C:/pf/
-dir.img-profile = /Users/img/pf/
+dir.img-profile = C:/pf/
+#dir.img-profile = /Users/img/pf/
 
 #errors
 server.error.include-exception=true
