--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jpa.open-in-view=false
 decorator.datasource.p6spy.enable-logging = true
 
 #ddl auto
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
@@ -54,3 +54,4 @@ server.error.include-stacktrace=always
 server.error.include-binding-errors=always
 spring.messages.basename=errors
 
+spring.main.allow-bean-definition-overriding=true
