--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jpa.open-in-view=false
 decorator.datasource.p6spy.enable-logging = true
 
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
