--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8888
 
 #h2 console
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
 #h2 db
