--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,12 +40,12 @@ spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
 #spring.servlet.multipart.location=c:\\upload
 #spring.servlet.multipart.location=/Users/img/post
-#file.postImg = c:\\upload
-file.postImg = /Users/img/post
+file.postImg = c:\\upload
+#file.postImg = /Users/img/post
 
 #profile_img storage
-#dir.img-profile = C:/pf/
-dir.img-profile = /Users/img/pf/
+dir.img-profile = C:/pf/
+#dir.img-profile = /Users/img/pf/
 
 #errors
 server.error.include-exception=true
