--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,8 +40,13 @@ spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
 #spring.servlet.multipart.location=c:\\upload
 #spring.servlet.multipart.location=/Users/img/post
+
+#post_img storage
 file.postImg = c:\\upload
 #file.postImg = /Users/img/post
+
+#post_default_img
+default.postImg = C:/upload/default_image.png
 
 #profile_img storage
 dir.img-profile = C:/pf/
