--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.jpa.open-in-view=false
 #spring.jpa.properties.hibernate.format_sql=true
 #logger로 출력
 #logging.level.org.hibernate.SQL=debug: debug
-#sql 문에서 (?)들이 bindingparameter = "실제값"으로 나옴.
+#sql문에서 (?)들이 bindingparameter = "실제값"으로 나옴.
 #logging.level.org.hibernate.type.descriptor.sql=trace
 #JPQL 보기
 #spring.jpa.properties.hibernate.use_sql_comments = true
@@ -28,7 +28,7 @@ spring.jpa.open-in-view=false
 decorator.datasource.p6spy.enable-logging = true
 
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
