--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,15 +42,15 @@ spring.servlet.multipart.location=c:\\upload
 #spring.servlet.multipart.location=/Users/img/post
 
 #post_img storage
-#file.postImg = c:\\upload
-file.postImg = /Users/img/post
+file.postImg = c:\\upload
+#file.postImg = /Users/img/post
 
 #post_default_img
 default.postImg = C:/upload/default_image.png
 
 #profile_img storage
-#dir.img-profile = C:/pf/
-dir.img-profile = /Users/img/pf/
+dir.img-profile = C:/pf/
+#dir.img-profile = /Users/img/pf/
 
 #errors
 server.error.include-exception=true
