--- a/build.gradle
+++ b/build.gradle
@@ -51,8 +51,9 @@ dependencies {
     //querydsl
     implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
-    //oauth
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    //batch
+    implementation 'org.springframework.boot:spring-boot-starter-batch'
+
 }
 
 tasks.named('test') {
