--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
     //oauth
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // https://mvnrepository.com/artifact/io.github.pityka/fileutils
+    implementation group: 'io.github.pityka', name: 'fileutils_2.11', version: '1.0.0'
+    // https://mvnrepository.com/artifact/commons-io/commons-io
+    implementation 'commons-io:commons-io:2.6' //파일 업로드 관련 라이브러리
+
 }
 
 tasks.named('test') {
