--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,3 +62,5 @@ spring.messages.basename=errors
 spring.main.allow-bean-definition-overriding=true
 
 spring.profiles.include=oauth
+
+spring.jpa.defer-datasource-initialization= true
