--- a/build.gradle
+++ b/build.gradle
@@ -55,15 +55,13 @@ dependencies {
     implementation "com.querydsl:querydsl-sql-spring:${queryDslVersion}"
     //batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
-<<<<<<< Updated upstream
     //oauth
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // https://mvnrepository.com/artifact/io.github.pityka/fileutils
     implementation group: 'io.github.pityka', name: 'fileutils_2.11', version: '1.0.0'
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation 'commons-io:commons-io:2.6' //파일 업로드 관련 라이브러리
-=======
->>>>>>> Stashed changes
+//    implementation 'org.springframework.boot:spring-boot-starter-batch'
 }
 
 tasks.named('test') {
