--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,19 @@ spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 
 #h2 db
-spring.datasource.url=jdbc:h2:~/carrot;AUTO_SERVER=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect4
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:~/carrot;AUTO_SERVER=true
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect4
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.open-in-view=false
+
+#maria db
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/carrotPJ
+spring.datasource.username=root
+spring.datasource.password=1234
 
 #show sql
 #system.print.out으로 출력
