--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/carrotPJ
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
 
 #show sql
 #system.print.out으로 출력
