--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8888
-spring.profiles.active: local
+spring.profiles.include=oauth
 
 #h2 console
 spring.h2.console.enabled=true
@@ -49,15 +49,15 @@ spring.servlet.multipart.location=c:\\upload
 #spring.servlet.multipart.location=/Users/img/post
 
 #post_img storage
-#file.postImg = c:\\upload
-file.postImg = /Users/img/post
+file.postImg = c:\\upload
+#file.postImg = /Users/img/post
 
 #post_default_img
 default.postImg = C:/upload/default_image.png
 
 #profile_img storage
-#dir.img-profile = C:/pf/
-dir.img-profile = /Users/img/pf/
+dir.img-profile = C:/upload/pf/
+#dir.img-profile = /Users/img/pf/
 
 #errors
 server.error.include-exception=true
@@ -68,6 +68,11 @@ spring.messages.basename=errors
 
 spring.main.allow-bean-definition-overriding=true
 
-spring.profiles.include=oauth
-
 spring.jpa.defer-datasource-initialization= true
+
+#spring boot batch + scheduler
+#batch 스키마-table 자동 생성 (always/never)
+spring.batch.jdbc.initialize-schema=never
+#시작과 동시에 batch 실행되는 것 방지
+spring.batch.job.enabled=false
+
