--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@ server.port=8888
 spring.profiles.include=oauth
 
 #h2 console
-spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.path=/h2-console
-
+#spring.h2.console.enabled=true
+#spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.path=/h2-console
 #h2 db
 #spring.datasource.url=jdbc:h2:~/carrot;AUTO_SERVER=true
 #spring.datasource.driverClassName=org.h2.Driver
@@ -17,11 +16,10 @@ spring.jpa.open-in-view=false
 
 #maria db
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/carrotPJ
+spring.datasource.url=jdbc:mariadb://localhost:3306/carrotpj?useSSL=false&characterEncoding=UTF-8rewriteBatchedStatements=true&profileSQL=true&maxQuerySizeToLog=500
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-
 
 #show sql
 #system.print.out으로 출력
@@ -74,7 +72,8 @@ spring.jpa.defer-datasource-initialization= true
 
 #spring boot batch + scheduler
 #batch 스키마-table 자동 생성 (always/never)
-spring.batch.jdbc.initialize-schema=never
+spring.batch.jdbc.initialize-schema=always
 #시작과 동시에 batch 실행되는 것 방지
 spring.batch.job.enabled=false
+spring.jpa.properties.hibernate.jdbc.batch_size= 10
 
