--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,19 +45,21 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
-spring.servlet.multipart.location=c:\\upload
-#spring.servlet.multipart.location=/Users/img/post
+#spring.servlet.multipart.location=c:\\upload
+spring.servlet.multipart.location=/Users/img/post
 
 #post_img storage
-file.postImg = c:\\upload
-#file.postImg = /Users/img/post
+#file.postImg = c:\\upload
+file.postImg = /Users/img/post
 
 #post_default_img
-default.postImg = C:/upload/default_image.png
+#default.postImg = C:/upload/default_image.png
+default.postImg = /Users/img/default_image.png
 
 #profile_img storage
-dir.img-profile = C:/upload/pf/
-#dir.img-profile = /Users/img/pf/
+#dir.img-profile = C:/upload/pf/
+dir.img-profile = /Users/img/pf/
+
 
 #errors
 server.error.include-exception=true
@@ -72,7 +74,7 @@ spring.jpa.defer-datasource-initialization= true
 
 #spring boot batch + scheduler
 #batch 스키마-table 자동 생성 (always/never)
-spring.batch.jdbc.initialize-schema=always
+spring.batch.jdbc.initialize-schema=never
 #시작과 동시에 batch 실행되는 것 방지
 spring.batch.job.enabled=false
 spring.jpa.properties.hibernate.jdbc.batch_size= 10
