이메일 인증, 임시비밀번호 발급

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation 'commons-io:commons-io:2.6' //파일 업로드 관련 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
