--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,4 +78,4 @@ spring.batch.jdbc.initialize-schema=never
 #시작과 동시에 batch 실행되는 것 방지
 spring.batch.job.enabled=false
 spring.jpa.properties.hibernate.jdbc.batch_size= 10
-
+logging.level.org.springframework.jdbc.core = debug
