시연 전 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 decorator.datasource.p6spy.enable-logging = true
 
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 #Live Reload
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
