--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 decorator.datasource.p6spy.enable-logging = true
 
 #ddl auto
-spring.jpa.hibernate.ddl-auto=create-drop
-#Live Reload
+spring.jpa.hibernate.ddl-auto=update
 spring.devtools.livereload.enabled=true
 spring.thymeleaf.cache=false
 
@@ -74,7 +73,7 @@ spring.jpa.defer-datasource-initialization= true
 
 #spring boot batch + scheduler
 #batch 스키마-table 자동 생성 (always/never)
-spring.batch.jdbc.initialize-schema=always
+spring.batch.jdbc.initialize-schema=never
 #시작과 동시에 batch 실행되는 것 방지
 spring.batch.job.enabled=false
 spring.jpa.properties.hibernate.jdbc.batch_size= 10
