--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,19 +44,19 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
 spring.servlet.multipart.file-size-threshold=100MB
-spring.servlet.multipart.location=c:\\upload
-#spring.servlet.multipart.location=/Users/img/post
+#spring.servlet.multipart.location=c:\\upload
+spring.servlet.multipart.location=/Users/img/post
 
 #post_img storage
-file.postImg = c:\\upload
-#file.postImg = /Users/img/post
+#file.postImg = c:\\upload
+file.postImg = /Users/img
 
 #post_default_img
-default.postImg = C:/upload/default_image.png
-#default.postImg = /Users/img/default_image.png
+#default.postImg = C:/upload/default_image.png
+default.postImg = /Users/img/post/default_image.png
 
 #profile_img storage
-dir.img-profile = C:/upload/pf/
+#dir.img-profile = C:/upload/pf/
 #dir.img-profile = /Users/img/pf/
 
 
@@ -76,4 +76,5 @@ spring.jpa.defer-datasource-initialization= true
 spring.batch.jdbc.initialize-schema=never
 #시작과 동시에 batch 실행되는 것 방지
 spring.batch.job.enabled=false
-spring.jpa.properties.hibernate.jdbc.batch_size= 10
+#jdbc batch
+spring.jpa.properties.hibernate.jdbc.batch_size= 100
