--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,10 @@ out/
 ### VS Code ###
 .vscode/
 
-### oauth ###
+### properties ###
 application-oauth.properties
-### email ###
+application-dev.properties
+application-local.properties
 email.properties
 ### testDB ###
 com/exercise/carrotproject/web/common/TestDBController.java
