--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,6 @@ spring.servlet.multipart.location=/Users/img/post
 file.postImg = /Users/img
 #post_default_img
 #default.postImg = C:/upload/default_image.png
+#default.pfImg =  C:/upload/default_image.png
 default.postImg = /Users/img/post/default_image.png
-
-
+default.pfImg = /Users/img/post/pf/profile_img.png
