--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ out/
 ### properties ###
 application-social.properties
 application-dev.properties
-application-local.properties
+application-prod.properties
 email.properties
 ### testDB ###
 com/exercise/carrotproject/web/common/TestDBController.java
