--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8888
-spring.profiles.include=social, prod
-#spring.profiles.include=social, dev
+#spring.profiles.include=social, prod
+spring.profiles.include=social, dev
 
 #h2 console
 #spring.h2.console.enabled=true
