--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,4 @@ application-dev.properties
 application-prod.properties
 email.properties
 ### testDB ###
-com/exercise/carrotproject/web/common/TestDBController.java
+TestDBController.java
