--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+**/.DS_Store
 
 ### STS ###
 .apt_generated
@@ -37,7 +38,6 @@ out/
 .vscode/
 
 ### properties ###
-application-social.properties
 application-dev.properties
 application-prod.properties
 email.properties
