--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,6 @@ spring.profiles.include=social, prod
 #jpa
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization= true
-
 spring.main.allow-bean-definition-overriding=true
 
 #show sql
@@ -38,7 +37,7 @@ server.error.include-exception=true
 server.error.include-message=always
 server.error.include-stacktrace=always
 server.error.include-binding-errors=always
-spring.messages.basename=errors
+#spring.messages.basename=errors
 
 #spring batch
 #batch 스키마-table 자동 생성 (always/never)
